docs: fix scrollbar

--- a/docs/app/global.css
+++ b/docs/app/global.css
@@ -248,3 +248,14 @@
 html {
 	scroll-behavior: smooth;
 }
+
+@layer utilities {
+	.no-scrollbar::-webkit-scrollbar {
+	  display: none;
+	}
+	.no-scrollbar {
+	  -ms-overflow-style: none;
+	  scrollbar-width: none;
+	}
+  }
+  
